TC-007/007-pod-valid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-run-as-non-root
spec:
  containers:
    - name: ubuntu
      image: ubuntu@sha256:6015f66923d7afbc53558d7ccffd325d43b4e249f41a6e93eef074c9505d2233
      command: [ "sh", "-c", "sleep 1h" ]
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
